# CKU-Sim

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
cku_sim/: __init__.py
cku_sim/analysis/: audited_negative_control.py  audited_panel.py  bootstrap.py  file_level_case_control.py  forward_panel.py  intervention_mechanism.py  label_audit.py  negative_control.py  policy_comparison.py  predictive_validation.py  prospective_file_panel.py  quantification_limits.py  statistics.py
cku_sim/collectors/: git_collector.py  github_corpus.py  nvd_collector.py  osv_collector.py  repo_metrics.py
cku_sim/core/: codebase.py  config.py  opacity.py
data/: README.md
docs/: EMPIRICAL_FOLLOWUP_SUMMARY.md
experiments/: config.example.yaml  config.external_holdout.yaml  config.external_holdout_expanded.yaml  config.forward_panel_curated.yaml  config.forward_panel_light8.yaml  e01_synthetic_replication.py  e02_real_codebase_survey.py  e03_cve_correlation.py  e04_temporal_evolution.py  e05_insurance_simulation.py  e06_file_level_case_control.py  e07_predictive_validation.py  e08_policy_comparison.py  e09_negative_control_bugfix.py  e10_forward_release_panel.py  e11_large_corpus_builder.py  e12_prospective_file_panel.py  e13_prospective_label_audit.py  e14_prospective_robustness.py  e15_negative_control_strict.py  e16_external_holdout.py  e17_bugfix_control_audit.py  e18_quantification_limits.py  e19_all_file_panel.py  e20_external_replication.py  e21_security_negative_control.py  e22_quantification_calibration.py  e23_external_intervention_mechanism.py  e24_external_quantification_failure.py  e25_external_intervention_long_horizon.py  e26_external_intervention_securityfile_enriched.py
tests/: test_core.py
(+427 files in other folders)
